--- a/_includes/body/footer.html
+++ b/_includes/body/footer.html
@@ -13,7 +13,8 @@
     {% endfor %}
     </small></nav>
   {% endif %}
-    <p><small>MPFE Consultancy Ltd is a company registered in England and Wales (Company No. <a class="external" href="https://find-and-update.company-information.service.gov.uk/company/11680837">11680837</a>) Unit 36 Silk Mill Industrial Estate, Brook Street, Tring, United Kingdom, HP23 5EF.</small></p>
+    <p><small>MPFE Consultancy Ltd is registered in England and Wales (Company No. <a class="external" href="https://find-and-update.company-information.service.gov.uk/company/11680837">11680837</a>)</small></p> 
+    <p><small>Unit 36 Silk Mill Industrial Estate, Brook Street, Tring, United Kingdom, HP23 5EF.</small></p>
   <hr class="sr-only"/>
 </footer>
 {% endif %}
